--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@capacitor/status-bar": "5.0.4",
     "axios": "^1.4.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
