--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@capacitor/keyboard": "5.0.4",
     "@capacitor/status-bar": "5.0.4",
     "axios": "^1.4.0",
+    "pinia": "^2.1.3",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.2",
-    "vuex": "^4.1.0"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
