--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/haptics": "5.0.4",
     "@capacitor/ios": "^5.0.5",
     "@capacitor/keyboard": "5.0.4",
+    "@capacitor/preferences": "^5.0.4",
     "@capacitor/status-bar": "5.0.4",
     "axios": "^1.4.0",
     "pinia": "^2.1.3",
