--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/preferences": "^5.0.4",
     "@capacitor/status-bar": "5.0.4",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "pinia": "^2.1.3",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
