--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/status-bar": "5.0.4",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "pinia": "^2.1.3",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
